--- a/frontEnd/javaScript/vezbi/programming exercises 2/index.html
+++ b/frontEnd/javaScript/vezbi/programming exercises 2/index.html
@@ -11,6 +11,12 @@
 
 
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <!-- <script src="script1.js"></script> -->
+
+    <!-- <script src="script2.js"></script> -->
+    <script src="script3.js"></script>
+    <!-- <script src="script4.js"></script> -->
+    <script src="script5.js"></script>
 </body>
 </html>
