--- a/frontEnd/javaScript/homeworks/homework 3 objects/bear/index.html
+++ b/frontEnd/javaScript/homeworks/homework 3 objects/bear/index.html
@@ -13,9 +13,11 @@
     
 
     <script src="help-functions.js"></script>
-    <!-- <script src="hunter.js"></script> -->
+
+    <script src="hunter.js"></script>
     <script src="animal.js"></script>
     <script src="bear.js"></script>
+    <script src="forest.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
