--- a/frontEnd/javaScript/homeworks/homework 3 objects/football club/index.html
+++ b/frontEnd/javaScript/homeworks/homework 3 objects/football club/index.html
@@ -14,6 +14,9 @@
         Calculate the total earnings of the club after 30 days, number of goals scored, number of t-shirts sold, number of seat tickets bought and the total sum of damage from hooligans.
     </p>
     <script src="help-functions.js"></script>
+    <script src="fanshoop.js"></script>
+    <script src="stadium.js"></script>
+    <script src="player.js"></script>
     <script src="game.js"></script>
     <script src="club.js"></script>
     <script src="main.js"></script>
